--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
 
     </style>
     <style>
-        .icon {
-            width: 1em;
-            height: 1em;
-        }
     </style>
 </head>
 <body>
@@ -51,6 +47,7 @@
     <g-button icon="settings" icon-position="right">
         按钮
     </g-button>
+    <g-icon name="download"></g-icon>
 </div>
 
 <script src="./src/app.js"></script>
