--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             --bordor-radius: 4px;
             --color: #333;
             --border-color: #999;
-            --border-color-hover: red;
+            --border-color-hover: #666;
         }
 
         #app {
