--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             box-sizing: border-box
         }
 
-        :root {
+        html {
             --button-height: 32px;
             --font-size: 14px;
             --button-bg: white;
@@ -57,7 +57,6 @@
 </div>
 
 <script src="./src/app.js"></script>
-<script src="//at.alicdn.com/t/font_2002564_i0ml0bgp4f.js"></script>
 
 </body>
 </html>
