--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 <div id="app">
 
     <div class="box">
-        <g-input value="王" @change="inputChange"></g-input>
+        <g-input value="王" v-model="message"></g-input>
+        <p>{{message}}</p>
+        <button @click="message+=1">+1</button>
     </div>
 
     <div class="box">
