--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>突突</title>
     <style>
         * {margin: 0; padding: 0; box-sizing: border-box;}
+
+        img {max-width: 100%}
+
         html {
             --button-height: 32px;
             --font-size: 14px;
@@ -18,20 +21,23 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
+
         #app {
             margin: 20px;
         }
+
         body {
             font-size: var(--font-size);
         }
     </style>
     <style>
-        .box{
+        .box {
             margin: 20px;
         }
     </style>
 </head>
 <body>
+
 <div id="app">
     <div style="border: 1px solid black;">
 
