--- a/index.html
+++ b/index.html
@@ -32,37 +32,9 @@
     </style>
 </head>
 <body>
-<style>
-    .demo {
-         min-height:100px;
-        border: 1px solid #666;
-    }
-    .sider{
-        background: #333;
-        width: 150px;
-    }
-    .sider.slide-enter, .sider.slide-leave-to{
-        margin-left: -150px;
-    }
-    .header{
-        background: #999;
-        height: 100px;
-    }
-    .footer{
-        background: #ccc;
-        height: 50px;
-    }
-</style>
-<div id="app">
-   <g-layout style="height: 100vh;">
-       <g-sider>sider</g-sider>
 
-       <g-layout>
-           <g-header>header</g-header>
-           <g-content>content</g-content>
-           <g-footer>footer</g-footer>
-       </g-layout>
-   </g-layout>
+<div id="app">
+  <button @click="showToast">点我</button>
 </div>
 <script src="./src/app.js"></script>
 </body>
