--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div id="app">
     <g-tabs :selected.sync="selectedTab" >
-        <g-tabs-head class="frank">
+        <g-tabs-head >
             <template slot="actions">
                 <button>设置</button>
             </template>
