--- a/index.html
+++ b/index.html
@@ -32,22 +32,24 @@
     </style>
 </head>
 <body>
+<div id="app" style=" padding-top: 100px; padding-left: 100px; border: 1px solid red;">
 
-<div id="app" style="padding-top:100px; padding-left: 100px; border: 1px solid red ">
+    <div style="overflow: hidden;border: 1px solid green; padding: 5px;"
+         @click="yyy">
+        <g-popover>
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <button>点我</button>
+        </g-popover>
+        <g-popover>
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <button>点我</button>
+        </g-popover>
+    </div>
 
-    <g-popover>
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <button>点我</button>
-    </g-popover>
-    <g-popover>
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-
-        <button>点我</button>
-    </g-popover>
 </div>
 <script src="./src/app.js"></script>
 </body>
