--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 <div id="app">
 
-    <div style="overflow: hidden; padding: 50px;">
+    <div style="overflow: hidden; padding-top: 50px; padding-bottom: 40px ">
         <g-popover position="bottom">
             <template slot="content">
                 <div>popover内容</div>
@@ -59,6 +59,34 @@
             </template>
             <g-button>点我</g-button>
         </g-popover>
+
+    </div>
+    <div style="overflow: hidden; padding-bottom: 50px;">
+        <g-popover position="bottom" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="top" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="left" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="right" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+
     </div>
 
 </div>
