--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="zh-Hans">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>突突</title>
     <style>
         * {margin: 0; padding: 0; box-sizing: border-box;}
+
         img {max-width: 100%;}
+
         html {
             --button-height: 32px;
             --font-size: 14px;
@@ -18,8 +21,10 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
+
         #app {
         }
+
         body {
             font-size: var(--font-size);
         }
@@ -28,11 +33,12 @@
 <body>
 
 <div id="app" style="padding: 100px">
-    <g-collapse single>
-        <g-collapse-item title="标题1">内容1</g-collapse-item>
-        <g-collapse-item title="标题2">内容2</g-collapse-item>
-        <g-collapse-item title="标题3">内容3</g-collapse-item>
+    <g-collapse :selected.sync="selectedTab">
+        <g-collapse-item title="标题1" name="1">内容1</g-collapse-item>
+        <g-collapse-item title="标题2" name="2">内容2</g-collapse-item>
+        <g-collapse-item title="标题3" name="3">内容3</g-collapse-item>
     </g-collapse>
+    {{selectedTab}}
 
 </div>
 <script src="./src/app.js"></script>
